--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -586,6 +586,8 @@
 .navbar-component .breadcrumb-divider--fade-out {
   -webkit-animation: fadeOut 0.5s linear forwards;
   animation: fadeOut 0.5s linear forwards;
+}
+.navbar-component .breadcrumb-divider--zero-padding {
   padding: 0 0 0 0;
 }
 .navbar-component .breadcrumb-button--opened {
