Fixed bug where button cursor was pointer after fade out

--- a/client/src/CSS/scss_partials/home/menu/navbar/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/navbar/_navbar.scss
@@ -59,6 +59,8 @@
 			fadeOut v.$navbar-breadcrumb-button-and-divider-fade-transition-time
 				linear forwards
 		);
+
+		cursor: default;
 	}
 
 	.breadcrumb-divider--zero-padding {
